Solve bug animated text not wrapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,12 +193,12 @@ body {
 /* --------- CSS Animation Section */
 
 .animation-text-one {
-    font-size: 4rem;
+    font-size: 48px;
     color: #f2f2f2;
     text-align: center;
     display: inline-block;
     overflow: hidden;
-    white-space: nowrap;
+    white-space: normal;
     width: 0px;
     animation: reveal 4s 1;
 }
@@ -209,59 +209,59 @@ body {
     }
 
 .animation-text-two {
-    font-size: 64px;
+    font-size: 48px;
     color: #f2f2f2;
     text-align: center;
     display: inline-block;
     overflow: hidden;
-    white-space: nowrap;
+    white-space: normal;
     width: 0px;
     animation: reveal 4s 1;
     animation-delay: 5s;
 }
 .animation-text-three {
-    font-size: 64px;
+    font-size: 48px;
     color: #f2f2f2;
     text-align: center;
     display: inline-block;
     overflow: hidden;
-    white-space: nowrap;
+    white-space: normal;
     width: 0px;
     animation: reveal 4s 1;
     animation-delay: 10s;
 }
 
 .animation-text-four {
-    font-size: 64px;
+    font-size: 48px;
     color: #f2f2f2;
     text-align: center;
     display: inline-block;
     overflow: hidden;
-    white-space: nowrap;
+    white-space: normal;
     width: 0px;
     animation: reveal 4s 1;
     animation-delay: 14s;
 }
 
 .animation-text-five {
-    font-size: 64px;
+    font-size: 48px;
     color: #f2f2f2;
     text-align: center;
     display: inline-block;
     overflow: hidden;
-    white-space: nowrap;
+    white-space: normal;
     width: 0px;
     animation: reveal 4s 1;
     animation-delay: 18s;
 }
 
 .animation-text-six {
-    font-size: 64px;
+    font-size: 48px;
     color: #f2f2f2;
     text-align: center;
     display: inline-block;
     overflow: hidden;
-    white-space: nowrap;
+    white-space: normal;
     width: 0px;
     animation-name: reveal-booking;
     animation-duration: 4s;
@@ -273,7 +273,7 @@ body {
 
 
 @keyframes reveal {
-    0% {opacity:0;width:100vw;}
+    0% {opacity:0;width:80vw;}
     10% {opacity:0.2;}
     20% {opacity:0.4;}
     30% {opacity:0.6;}
@@ -283,18 +283,18 @@ body {
     70% {opacity:0.6;} 
     80% {opacity:0.4;}
     90% {opacity:0.2;}
-    100% {opacity:0;width:100vw;}
+    100% {opacity:0;width:80vw;}
 }
 
 @keyframes reveal-booking {
-    0% {opacity:0;width:100vw;}
+    0% {opacity:0;width:80vw;}
     10% {opacity:0.2;}
     20% {opacity:0.4;}
     30% {opacity:0.6;}
     40% {opacity:0.8;}
     50% {opacity:1;}
     60% {opacity:1;}
-    100% {opacity:1;width:100vw;}
+    100% {opacity:1;width:80vw;}
 }
 
 /* --------- Introduction section */
